<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_CRYO_EVAC_ECODRY_ATH2303M" Id="{ed8aa7c0-2b16-443f-8280-df6ab786a367}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CRYO_EVAC_ECODRY_ATH2303M EXTENDS FB_CRYO_EVAC_BASE
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	rp:	FB_CRYO_PUMP_ECODRY;	// Roughing Pump
	tp:	FB_CRYO_PUMP_ATH2303M;	// Turbo Molecular Pump
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();
]]></ST>
    </Implementation>
    <Method Name="M_Configure" Id="{880a626f-3635-4876-a4b1-cb719ce4cbd9}">
      <Declaration><![CDATA[METHOD M_Configure
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//
// Specific PDS IR Imager configuration.
//
IF NOT stat.bConfigured	THEN
	// MANDATORY: Set References !!!
	// If not done, system will crash !!!
	rpRef	REF=rp;
	tpRef	REF=tp;
	

	// Specific instance configuration, e.g. anything different
	// from the default values given in the cfg structure of type T_CRYO_EVAC_CFG.
	cfg.nPressGaugeType1	:= E_CRYO_SENSOR_TYPE_PRESS.WRG_D_NW25;
	cfg.nPressGaugeType2	:= E_CRYO_SENSOR_TYPE_PRESS.PKR_360;

	cfg.lrThld_Prevac := 5.0;	// Prevacuum pressure threshold
	// Cryo pressure threshold to start Turbo Pump before opening Valve
	cfg.lrThld_TP_SafeStartPressure := 0.01;	
	// Cryo pressure threshold to start Turbo Pump once Valve is open
	cfg.lrThld_Valve_SafeOpenPressure := 0.1;	
	cfg.tDelay := T#3S;	// Time delay before stopping Turbo Pump

	stat.bConfigured	:= TRUE;;
ELSE
	RETURN;	// Nothing to do any more
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_ExecuteControllers" Id="{0d1dca35-bf78-429a-918a-e193bf3c6b91}">
      <Declaration><![CDATA[METHOD M_ExecuteControllers
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//
// Specific Cryo Lab Evacuation System HW configuration.
//

// Roughing Pump	
rp(	
	in_bSimulation	:= FALSE,
	in_sName		:= 'ECODRY V01',
	in_bEnable		:= ctrl.bEnable_RP,
	in_nSlaveID		:= 31,
	in_sVersion		:= 'V01',
	in_nPeriod		:= 2000);

// Turbo Molecular Pump
tp(	
	in_bSimulation	:= FALSE,
	in_sName		:= 'ATH2303M',
	in_bEnable		:= ctrl.bEnable_TP,
	in_nModel		:= 2303,
	in_bAutoMonitor	:= TRUE,
	in_nPeriod		:= 2000);

// Valve
valve(
	in_bEnable		:= ctrl.bEnable_Valve,
	in_nFeedback	:= E_CRYO_BIN_ACT_FEEDBACK.ON_AND_OFF);
		
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_CRYO_EVAC_ECODRY_ATH2303M">
      <LineId Id="9" Count="0" />
      <LineId Id="145" Count="0" />
    </LineIds>
    <LineIds Name="FB_CRYO_EVAC_ECODRY_ATH2303M.M_Configure">
      <LineId Id="25" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="11" Count="2" />
      <LineId Id="15" Count="5" />
      <LineId Id="14" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="8" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
    <LineIds Name="FB_CRYO_EVAC_ECODRY_ATH2303M.M_ExecuteControllers">
      <LineId Id="32" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="46" Count="8" />
      <LineId Id="41" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="7" Count="4" />
      <LineId Id="42" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>